<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/cartridge_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:text="@string/cartridge_info"
            android:textSize="18sp"
            android:padding="8dp"
            tools:ignore="ExtraText" />

        <ImageButton
            android:id="@+id/settings_button"
            android:contentDescription="@string/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/settings_button"
            app:srcCompat="@drawable/grey_settings_cogwheel"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_00_00_00"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="16dp"/>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/start_button"
            style="Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/stop_button"
            style="Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/reset_button"
            style="Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_margin="5dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:minHeight="48dp"
            android:text="@string/history" />
    </ScrollView>
</LinearLayout>